--- a/Report5/A5.md
+++ b/Report5/A5.md
@@ -13,9 +13,10 @@
 | R03                | projectMembers(__projectID__ → projects NN, userID → users NN, role)                       |
 | R04                | tasks(__IDtask__ UK NN, taskOwner → users NN, projectID → projects NN, taskName NN, taskDescription NN, priority NN, dateLimit, completed, completionDate) |
 | R05                | forum(__IDforum__ UK NN, projectID → projects NN, ownerID → users NN, forumTitle NN, forumDescription)                                |
-| R06                | Table3(__id1__, id2 → Table2, attribute UK NN)                       |
-| R07                | Table4((__id1__, __id2__) → Table3, id3, attribute CK attribute > 0) |
- 
+| R06                | post(__IDpost__ UK NN, forumID → forum NN, ownerID  → users NN, postText NN, postDate NN)                       |
+| R07                | notification((__userID__, __senderID__) → users NN, projectID → projects NN, text NN, dateSent NN) |
+
+where UK means UNIQUE KEY, NN means NOT NULL, DF means DEFAULT and CK means CHECK. 
  
 ## 2. Domains
  
