--- a/Report5/A5.md
+++ b/Report5/A5.md
@@ -11,7 +11,7 @@
 | R01                | users(__IDuser__ UK NN, username UK NN, password NN, name, lastName, gender, country, email UK NN)                                         |
 | R02                | projects(__IDproject__ UK NN, projTitle NN, projDescription NN)           |
 | R03                | projectMembers(__projectID__ → projects NN, userID → users NN, role)                       |
-| R04                | tasks(__IDtask__ UK NN, taskOwner → users NN, projectID → projects NN, taskName NN, taskDescription NN, priority NN, dateLimit, completed, completionDate) |
+| R04                | tasks(__IDtask__ UK NN, taskOwner → users, projectID → projects NN, taskName NN, taskDescription NN, priority NN, dateLimit, completed, completionDate) |
 | R05                | forum(__IDforum__ UK NN, projectID → projects NN, ownerID → users NN, forumTitle NN, forumDescription)                                |
 | R06                | post(__IDpost__ UK NN, forumID → forum NN, ownerID  → users NN, postText NN, postDate NN)                       |
 | R07                | notification((__userID__, __senderID__) → users NN, projectID → projects NN, text NN, dateSent NN) |
@@ -32,32 +32,34 @@ The specification of additional domains can also be made in a compact form, usin
  
 > To validate the Relational Schema obtained from the Conceptual Model, all functional dependencies are identified and the normalization of all relation schemas is accomplished. Should it be necessary, in case the scheme is not in the Boyce–Codd Normal Form (BCNF), the relational schema is refined using normalization.
  
-| **Table R01**                    |
+| **Table R01** (users)                    |
 | -------------------------------- |
-| **Keys**: { id }                 |
+| **Keys**: { IDuser, username, email }                 |
 | **Functional Dependencies**      |
-| FD0101          | id → attribute |
+| FD0101          | {IDuser} → {username, password, name, lastName, gender, country, email} |
+| FD0102          | {username} → {IDuser, password, name, lastName, gender, country, email} |
+| FD0103          | {email} → {IDuser, password, name, lastName, gender, country, username} |
 | **Normal Form** | BCNF           |
  
-| **Table R02**                    |
+| **Table R02** (projects)                   |
 | -------------------------------- |
-| **Keys**: { id }                 |
+| **Keys**: { IDproject }                 |
 | **Functional Dependencies**      |
-| FD0201          | id → attribute |
+| FD0201          | {IDproject} → {projTitle, projDescription} |
 | **Normal Form** | BCNF           |
  
-| **Table R03**                             |
+| **Table R03** (projectMembers)                            |
 | ----------------------------------------- |
-| **Keys**: { id1, attribute }              |
+| **Keys**: { (projectID, userID) }              |
 | **Functional Dependencies**               |
-| FD0301          | {id} → {id2, attribute} |
+| FD0301          | {(projectID, userID)} → {role} |
 | **Normal Form** | BCNF                    |
  
-| **Table R04**                                    |
+| **Table R04** (tasks)                                   |
 | ------------------------------------------------ |
-| **Keys**: { (id1, id2) }                         |
+| **Keys**: { (IDtask, projectID) }                         |
 | **Functional Dependencies**                      |
-| FD0401          | {(id1,id2)} → {id3, attribute} |
+| FD0401          | {(IDtask, projectID)} → {id3, attribute} |
 | **Normal Form** | BCNF                           |
  
 > If necessary, description of the changes necessary to convert the schema to BCNF.
