--- a/Report5/A5.md
+++ b/Report5/A5.md
@@ -1,9 +1,9 @@
 # A5: Relational Schema, validation and schema refinement
  
+ This artifact contains the Relational Schema obtained by mapping from the Conceptual Data Model. The Relational Schema includes the relation schema, attributes, domains, primary keys, foreign keys and other integrity rules: UNIQUE, DEFAULT, NOT NULL, CHECK. 
  
 ## 1. Relational Schema
  
-> The Relational Schema includes the relation schemas, attributes, domains, primary keys, foreign keys and other integrity rules: UNIQUE, DEFAULT, NOT NULL, CHECK.
 > Relation schemas are specified in the compact notation:
  
 | Relation reference | Relation Compact Notation                                            |
@@ -20,12 +20,13 @@ where UK means UNIQUE KEY, NN means NOT NULL, DF means DEFAULT and CK means CHEC
  
 ## 2. Domains
  
-The specification of additional domains can also be made in a compact form, using the notation:
+Specification of additional domains:
  
 | Domain Name | Domain Specification           |
 | ----------- | ------------------------------ |
 | Today	      | DATE DEFAULT CURRENT_DATE      |
 | Priority    | ENUM ('High', 'Medium', 'Low') |
+| Completed   | ENUM ('True', 'False')         |
  
  
 ## 3. Functional Dependencies and schema validation
@@ -59,22 +60,37 @@ The specification of additional domains can also be made in a compact form, usin
 | ------------------------------------------------ |
 | **Keys**: { (IDtask, projectID) }                         |
 | **Functional Dependencies**                      |
-| FD0401          | {(IDtask, projectID)} → {id3, attribute} |
+| FD0401          | {(IDtask, projectID)} → {taskOwner, taskName, taskDescription, priority, datelimit, completed, completionDate} |
 | **Normal Form** | BCNF                           |
+
+| **Table R05** (forum)                     |
+| ----------------------------------------- |
+| **Keys**: { (IDforum, projectID) }        |
+| **Functional Dependencies**               |
+| FD0501          | {(IDforum, projectID)} → {ownerID, forumTitle, forumDescription} |
+| FD0502          | { ownerID } → {IDforum, projectID, forumTitle, forumDescription} |
+| **Normal Form** | BCNF                    |
+
+| **Table R06** (post)                      |
+| ----------------------------------------- |
+| **Keys**: { (IDpost, forumID), ownerID }  |
+| **Functional Dependencies**               |
+| FD0601          | {(IDpost, forumID)} → {ownerID, postText, postDate} |
+| FD0602          | { onwerID } → {IDpost, forumID, postText, postDate} |
+| **Normal Form** | BCNF                    |
+
+| **Table R07** (notification)              |
+| ----------------------------------------- |
+| **Keys**: { userID, senderID, projectID } |
+| **Functional Dependencies**               |
+| FD0701          | {(userID, senderID, projectID)} → {text, dateSent} |
+| **Normal Form** | BCNF                    |
  
-> If necessary, description of the changes necessary to convert the schema to BCNF.
-> Justification of the BCNF.
+> To validate the Relational Schema obtained from the Conceptual Model, all functional dependencies are identified and the normalization of all relation schemas is accomplished. 
  
 ## 4. SQL Code
- 
-> SQL code necessary to build (and rebuild) the database.
-> This code should also be included in the group's github repository as an SQL script, and a link include here.
 
- {% include_relative create_instruction.sql %}
- 
- {% include_relative /create_instruction.sql %}
- 
- :create_instruction.sql:
+ [create_instructions.sql] create_instruction.sql
 
  
 ## Revision history
