--- a/Report5/A5.md
+++ b/Report5/A5.md
@@ -36,7 +36,7 @@ Specification of additional domains:
 | **Table R01** (users)                    |
 | -------------------------------- |
 | **Keys**: { IDuser, username, email }                 |
-| **Functional Dependencies**      |
+| **Functional Dependencies**      ||
 | FD0101          | {IDuser} → {username, password, name, lastName, gender, country, email} |
 | FD0102          | {username} → {IDuser, password, name, lastName, gender, country, email} |
 | FD0103          | {email} → {IDuser, password, name, lastName, gender, country, username} |
