--- a/Report5/A5.md
+++ b/Report5/A5.md
@@ -35,7 +35,7 @@ Specification of additional domains:
  
 | **Table R01** (users)                    |
 | -------------------------------- |
-| **Keys**: { IDuser, username, email }                 |
+| **Keys**: { IDuser, username, email }                 ||
 | **Functional Dependencies**      ||
 | FD0101          | {IDuser} → {username, password, name, lastName, gender, country, email} |
 | FD0102          | {username} → {IDuser, password, name, lastName, gender, country, email} |
@@ -44,45 +44,45 @@ Specification of additional domains:
  
 | **Table R02** (projects)                   |
 | -------------------------------- |
-| **Keys**: { IDproject }                 |
-| **Functional Dependencies**      |
+| **Keys**: { IDproject }                 ||
+| **Functional Dependencies**      ||
 | FD0201          | {IDproject} → {projTitle, projDescription} |
 | **Normal Form** | BCNF           |
  
 | **Table R03** (projectMembers)                            |
 | ----------------------------------------- |
-| **Keys**: { (projectID, userID) }              |
-| **Functional Dependencies**               |
+| **Keys**: { (projectID, userID) }              ||
+| **Functional Dependencies**               ||
 | FD0301          | {(projectID, userID)} → {role} |
 | **Normal Form** | BCNF                    |
  
 | **Table R04** (tasks)                                   |
 | ------------------------------------------------ |
-| **Keys**: { (IDtask, projectID) }                         |
-| **Functional Dependencies**                      |
+| **Keys**: { (IDtask, projectID) }                         ||
+| **Functional Dependencies**                      ||
 | FD0401          | {(IDtask, projectID)} → {taskOwner, taskName, taskDescription, priority, datelimit, completed, completionDate} |
 | **Normal Form** | BCNF                           |
 
 | **Table R05** (forum)                     |
 | ----------------------------------------- |
-| **Keys**: { (IDforum, projectID) }        |
-| **Functional Dependencies**               |
+| **Keys**: { (IDforum, projectID) }        ||
+| **Functional Dependencies**               ||
 | FD0501          | {(IDforum, projectID)} → {ownerID, forumTitle, forumDescription} |
 | FD0502          | { ownerID } → {IDforum, projectID, forumTitle, forumDescription} |
 | **Normal Form** | BCNF                    |
 
 | **Table R06** (post)                      |
 | ----------------------------------------- |
-| **Keys**: { (IDpost, forumID), ownerID }  |
-| **Functional Dependencies**               |
+| **Keys**: { (IDpost, forumID), ownerID }  ||
+| **Functional Dependencies**               ||
 | FD0601          | {(IDpost, forumID)} → {ownerID, postText, postDate} |
 | FD0602          | { onwerID } → {IDpost, forumID, postText, postDate} |
 | **Normal Form** | BCNF                    |
 
 | **Table R07** (notification)              |
 | ----------------------------------------- |
-| **Keys**: { userID, senderID, projectID } |
-| **Functional Dependencies**               |
+| **Keys**: { userID, senderID, projectID } ||
+| **Functional Dependencies**               ||
 | FD0701          | {(userID, senderID, projectID)} → {text, dateSent} |
 | **Normal Form** | BCNF                    |
  
