--- a/Report5/A5.md
+++ b/Report5/A5.md
@@ -33,56 +33,56 @@ Specification of additional domains:
  
 > To validate the Relational Schema obtained from the Conceptual Model, all functional dependencies are identified and the normalization of all relation schemas is accomplished. Should it be necessary, in case the scheme is not in the Boyce–Codd Normal Form (BCNF), the relational schema is refined using normalization.
  
-| **Table R01** (users)                    |
-| -------------------------------- |
-| **Keys**: { IDuser, username, email }                 ||
-| **Functional Dependencies**      ||
+| **Table R01** (users)                    |   |
+| -------------------------------- | - |
+| **Keys**: { IDuser, username, email }                 |   |
+| **Functional Dependencies**      |   |
 | FD0101          | {IDuser} → {username, password, name, lastName, gender, country, email} |
 | FD0102          | {username} → {IDuser, password, name, lastName, gender, country, email} |
 | FD0103          | {email} → {IDuser, password, name, lastName, gender, country, username} |
 | **Normal Form** | BCNF           |
  
-| **Table R02** (projects)                   |
-| -------------------------------- |
-| **Keys**: { IDproject }                 ||
-| **Functional Dependencies**      ||
+| **Table R02** (projects)               |   |
+| -------------------------------- | - |
+| **Keys**: { IDproject }                 |   |
+| **Functional Dependencies**      |   |
 | FD0201          | {IDproject} → {projTitle, projDescription} |
 | **Normal Form** | BCNF           |
  
-| **Table R03** (projectMembers)                            |
-| ----------------------------------------- |
-| **Keys**: { (projectID, userID) }              ||
-| **Functional Dependencies**               ||
+| **Table R03** (projectMembers)                         |   |
+| ----------------------------------------- | - |
+| **Keys**: { (projectID, userID) }              |   |
+| **Functional Dependencies**               |   |
 | FD0301          | {(projectID, userID)} → {role} |
 | **Normal Form** | BCNF                    |
  
-| **Table R04** (tasks)                                   |
-| ------------------------------------------------ |
-| **Keys**: { (IDtask, projectID) }                         ||
-| **Functional Dependencies**                      ||
+| **Table R04** (tasks)                                |   |
+| ------------------------------------------------ | - |
+| **Keys**: { (IDtask, projectID) }                         |   |
+| **Functional Dependencies**                      |   |
 | FD0401          | {(IDtask, projectID)} → {taskOwner, taskName, taskDescription, priority, datelimit, completed, completionDate} |
 | **Normal Form** | BCNF                           |
 
-| **Table R05** (forum)                     |
-| ----------------------------------------- |
-| **Keys**: { (IDforum, projectID) }        ||
-| **Functional Dependencies**               ||
+| **Table R05** (forum)                  |   |
+| ---------------------------------------- | - |
+| **Keys**: { (IDforum, projectID) }        |   |
+| **Functional Dependencies**               |   |
 | FD0501          | {(IDforum, projectID)} → {ownerID, forumTitle, forumDescription} |
 | FD0502          | { ownerID } → {IDforum, projectID, forumTitle, forumDescription} |
 | **Normal Form** | BCNF                    |
 
-| **Table R06** (post)                      |
-| ----------------------------------------- |
-| **Keys**: { (IDpost, forumID), ownerID }  ||
-| **Functional Dependencies**               ||
+| **Table R06** (post)                   |   |
+| ---------------------------------------- | - |
+| **Keys**: { (IDpost, forumID), ownerID }  |   |
+| **Functional Dependencies**               |   |
 | FD0601          | {(IDpost, forumID)} → {ownerID, postText, postDate} |
 | FD0602          | { onwerID } → {IDpost, forumID, postText, postDate} |
 | **Normal Form** | BCNF                    |
 
-| **Table R07** (notification)              |
-| ----------------------------------------- |
-| **Keys**: { userID, senderID, projectID } ||
-| **Functional Dependencies**               ||
+| **Table R07** (notification)           |   |
+| ---------------------------------------- | - |
+| **Keys**: { userID, senderID, projectID } |   |
+| **Functional Dependencies**               |   |
 | FD0701          | {(userID, senderID, projectID)} → {text, dateSent} |
 | **Normal Form** | BCNF                    |
  
