added uml and new business rules

--- a/Report4/A4.md
+++ b/Report4/A4.md
@@ -4,17 +4,19 @@
  
 > UML class diagram containing the classes, associations, multiplicity and roles.
 > For each class, the attributes, associations and constraints are included in the class diagram
- 
+![UML](UML/ClassDiagram1.jpg)
+
+
 ## 2. Additional Business Rules
- 
-> Business rules can be included in the UML diagram as UML notes or in a table in this section.
- 
-## Revision history
- 
-Changes made to the first submission:
-1. Item 1
-1. Item 2
- 
+> To the Buisiness Rules presented in the secound report we sould like to add:
+
+Identifier|Name|Description 
+----------|----|-----------
+BR05|Good Password|Passwords need to be 8 characters long and contain a capital letter and a number
+BR06|Name Checking|User's Names and Surnames can't contain letters
+BR07|Project Name|A Project can't have the same name as another project already in the database
+
+
 ***
  
 GROUP1767, xx/xx/2018
