--- a/Report5/A5.md
+++ b/Report5/A5.md
@@ -9,7 +9,7 @@
 | Relation reference | Relation Compact Notation                                            |
 | ------------------ | -------------------------------------------------------------------- |
 | R01                | users(__IDuser__ UK NN, username UK NN, password NN, name, lastName, gender, country, email UK NN)                                         |
-| R02                | projects(__IDproject__ UK NN, projTitle NN, projDescription NN)           |
+| R02                | projects(__IDproject__ UK NN, projTitle NN, projDescription NN, size NN)           |
 | R03                | projectMembers(__projectID__ → projects NN, userID → users NN, role)                       |
 | R04                | tasks(__IDtask__ UK NN, taskOwner → users, projectID → projects NN, taskName NN, taskDescription NN, priority NN, dateLimit, completed, completionDate) |
 | R05                | forum(__IDforum__ UK NN, projectID → projects NN, ownerID → users NN, forumTitle NN, forumDescription)                                |
@@ -27,6 +27,7 @@ Specification of additional domains:
 | Today	      | DATE DEFAULT CURRENT_DATE      |
 | Priority    | ENUM ('High', 'Medium', 'Low') |
 | Completed   | ENUM ('True', 'False')         |
+| Gender      | ENUM ('M', 'F', 'O')           |
  
  
 ## 3. Functional Dependencies and schema validation
@@ -46,7 +47,7 @@ Specification of additional domains:
 | -------------------------------- | - |
 | **Keys**: { IDproject }                 |   |
 | **Functional Dependencies**      |   |
-| FD0201          | {IDproject} → {projTitle, projDescription} |
+| FD0201          | {IDproject} → {projTitle, projDescription, size} |
 | **Normal Form** | BCNF           |
  
 | **Table R03** (projectMembers)                         |   |
@@ -109,7 +110,7 @@ CREATE TABLE users(
 
 	lastName VARCHAR(60),
 
-	gender VARCHAR(60),
+	gender ENUM('M', 'F', 'O'),
 
 	country VARCHAR(60),
 
@@ -125,7 +126,9 @@ CREATE TABLE projects(
 
 	projTitle VARCHAR(60) NOT NULL,
 
-	projDescription VARCHAR(500) NOT NULL
+	projDescription VARCHAR(500) NOT NULL,
+	
+	size INTEGER NOT NULL
 
 );
 
@@ -157,11 +160,11 @@ CREATE TABLE tasks(
 
 	taskDescription VARCHAR(500) NOT NULL,
 
-	priority VARCHAR(60) NOT NULL,
+	priority ENUM('High', 'Medium', 'Low') NOT NULL,
 
 	dateLimit DATE,
 
-	completed INTEGER,
+	completed ENUM('True', 'False'),
 
 	completionDate DATE
 
