--- a/Report5/A5.md
+++ b/Report5/A5.md
@@ -11,7 +11,7 @@
 | R01                | users(__IDuser__ UK NN, username UK NN, password NN, name, lastName, gender, country, email UK NN)                                         |
 | R02                | projects(__IDproject__ UK NN, projTitle NN, projDescription NN, size NN)           |
 | R03                | projectMembers(__projectID__ → projects NN, userID → users NN, role)                       |
-| R04                | tasks(__IDtask__ UK NN, taskOwner → users, projectID → projects NN, taskName NN, taskDescription NN, priority NN, dateLimit, completed, completionDate) |
+| R04                | tasks(__IDtask__ UK NN, taskOwner → users, projectID → projects NN, taskName NN, taskDescription NN, priority NN, dateLimit, status, completionDate) |
 | R05                | forum(__IDforum__ UK NN, projectID → projects NN, ownerID → users NN, forumTitle NN, forumDescription)                                |
 | R06                | post(__IDpost__ UK NN, forumID → forum NN, ownerID  → users NN, postText NN, postDate NN)                       |
 | R07                | notification((__userID__, __senderID__) → users NN, projectID → projects NN, text NN, dateSent NN) |
@@ -22,12 +22,12 @@ where UK means UNIQUE KEY, NN means NOT NULL, DF means DEFAULT and CK means CHEC
  
 Specification of additional domains:
  
-| Domain Name | Domain Specification           |
-| ----------- | ------------------------------ |
-| Today	      | DATE DEFAULT CURRENT_DATE      |
-| Priority    | ENUM ('High', 'Medium', 'Low') |
-| Completed   | ENUM ('True', 'False')         |
-| Gender      | ENUM ('M', 'F', 'O')           |
+| Domain Name | Domain Specification                     |
+| ----------- | ---------------------------------------- |
+| Today	      | DATE DEFAULT CURRENT_DATE                |
+| Priority    | ENUM ('High', 'Medium', 'Low')           |
+| Status      | ENUM ('Completed', 'Pending', 'Progress) |
+| Gender      | ENUM ('M', 'F', 'O')                     |
  
  
 ## 3. Functional Dependencies and schema validation
@@ -164,7 +164,7 @@ CREATE TABLE tasks(
 
 	dateLimit DATE,
 
-	completed ENUM('True', 'False'),
+	completed ENUM('Completed', 'Pending', 'Progress'),
 
 	completionDate DATE
 
