--- a/Report5/A5.md
+++ b/Report5/A5.md
@@ -28,6 +28,7 @@ Specification of additional domains:
 | Priority    | ENUM ('High', 'Medium', 'Low')           |
 | Status      | ENUM ('Completed', 'Pending', 'Progress) |
 | Gender      | ENUM ('M', 'F', 'O')                     |
+| Role        | ENUM('Coordinator', 'Member', 'Pending') |
  
  
 ## 3. Functional Dependencies and schema validation
