--- a/Report5/A5.md
+++ b/Report5/A5.md
@@ -9,12 +9,12 @@
 | Relation reference | Relation Compact Notation                                            |
 | ------------------ | -------------------------------------------------------------------- |
 | R01                | users(__IDuser__ UK NN, username UK NN, password NN, name, lastName, gender, country, email UK NN)                                         |
-| R02                | projects(__IDproject__ UK NN, projTitle NN, projDescription NN, size NN)           |
+| R02                | projects(__IDproject__ UK NN, projTitle NN, projDescription NN, teamSize NN, privacy NN)           |
 | R03                | projectMembers(__projectID__ → projects NN, userID → users NN, role)                       |
-| R04                | tasks(__IDtask__ UK NN, taskOwner → users, projectID → projects NN, taskName NN, taskDescription NN, priority NN, dateLimit, status, completionDate) |
-| R05                | forum(__IDforum__ UK NN, projectID → projects NN, ownerID → users NN, forumTitle NN, forumDescription)                                |
-| R06                | post(__IDpost__ UK NN, forumID → forum NN, ownerID  → users NN, postText NN, postDate NN)                       |
-| R07                | notification((__userID__, __senderID__) → users NN, projectID → projects NN, text NN, dateSent NN) |
+| R04                | tasks(__IDtask__ UK NN, taskOwner → users, projectID → projects NN, taskName NN, taskDescription NN, priority NN, dateCreated NN,dateLimit, status, taskWorker → users, completionDate) |
+| R05                | forumPost(__IDforum__ UK NN, projectID → projects NN, ownerID → users NN, forumTitle NN, post NN, dateCreated NN)                                |
+| R06                | comments(__IDcomment__ UK NN, forumID → forum NN, ownerID  → users NN, commentText NN, commentDate NN)                       |
+| R07                | notification((__userID__, __senderID__) → users NN, projectID → projects NN, taskID, notificationText NN, dateSent NN) |
 
 where UK means UNIQUE KEY, NN means NOT NULL, DF means DEFAULT and CK means CHECK. 
  
