--- a/Report4/A4.md
+++ b/Report4/A4.md
@@ -2,7 +2,7 @@
  
 ## 1. Class diagram
 
-![UML](UML/ClassDiagram1.jpg)
+![UML](UML_update/ClassModel.jpg)
 
 
 ## 2. Additional Business Rules
@@ -11,7 +11,7 @@
 Identifier|Name|Description 
 ----------|----|-----------
 BR05|Good Password|Passwords need to be 8 characters long and contain a capital letter and a number
-BR06|Name Checking|User's Names and Surnames can't contain letters
+BR06|Name Checking|User's Names and Surnames can't contain numbers
 BR07|Project Name|A Project can't have the same name as another project already in the database
 BR08|Coordinator Heritage|A Project's Coordinator can't leave a project if he is the only Coordinator in said Project, a Common Users has to be promoted first
 
