--- a/Report5/A5.md
+++ b/Report5/A5.md
@@ -48,7 +48,7 @@ Specification of additional domains:
 | -------------------------------- | - |
 | **Keys**: { IDproject }                 |   |
 | **Functional Dependencies**      |   |
-| FD0201          | {IDproject} → {projTitle, projDescription, size} |
+| FD0201          | {IDproject} → {projTitle, projDescription, teamSize, privacy} |
 | **Normal Form** | BCNF           |
  
 | **Table R03** (projectMembers)                         |   |
@@ -57,36 +57,35 @@ Specification of additional domains:
 | **Functional Dependencies**               |   |
 | FD0301          | {(projectID, userID)} → {role} |
 | **Normal Form** | BCNF                    |
- 
+
 | **Table R04** (tasks)                                |   |
 | ------------------------------------------------ | - |
 | **Keys**: { (IDtask, projectID) }                         |   |
 | **Functional Dependencies**                      |   |
-| FD0401          | {(IDtask, projectID)} → {taskOwner, taskName, taskDescription, priority, datelimit, completed, completionDate} |
+| FD0401          | {(IDtask, projectID)} → {taskOwner, taskName, taskDescription, priority, dateCreated, dateLimit, status, taskWorker, completionDate} |
 | **Normal Form** | BCNF                           |
 
-
-| **Table R05** (forum)                  |   |
+| **Table R05** (forumPost)                  |   |
 | ---------------------------------------- | - |
 | **Keys**: { (IDforum, projectID) }        |   |
 | **Functional Dependencies**               |   |
-| FD0501          | {(IDforum, projectID)} → {ownerID, forumTitle, forumDescription} |
-| FD0502          | { ownerID } → {IDforum, projectID, forumTitle, forumDescription} |
+| FD0501          | {(IDforum, projectID)} → {ownerID, forumTitle, post, dateCreated} |
+| FD0502          | { ownerID } → {IDforum, projectID, forumTitle, post, dateCreated} |
 | **Normal Form** | BCNF                    |
 
-| **Table R06** (post)                   |   |
+| **Table R06** (comments)                   |   |
 | ---------------------------------------- | - |
-| **Keys**: { (IDpost, forumID), ownerID }  |   |
+| **Keys**: { (IDcomment, forumID), ownerID }  |   |
 | **Functional Dependencies**               |   |
-| FD0601          | {(IDpost, forumID)} → {ownerID, postText, postDate} |
-| FD0602          | { onwerID } → {IDpost, forumID, postText, postDate} |
+| FD0601          | {(IDcomment, forumID)} → {ownerID, commentText, commentDate} |
+| FD0602          | { onwerID } → {IDcomment, forumID, commentText, commentDate} |
 | **Normal Form** | BCNF                    |
 
 | **Table R07** (notification)           |   |
 | ---------------------------------------- | - |
 | **Keys**: { userID, senderID, projectID } |   |
 | **Functional Dependencies**               |   |
-| FD0701          | {(userID, senderID, projectID)} → {text, dateSent} |
+| FD0701          | {(userID, senderID, projectID)} → {taskID, notificationText, dateSent} |
 | **Normal Form** | BCNF                    |
  
 > To validate the Relational Schema obtained from the Conceptual Model, all functional dependencies are identified and the normalization of all relation schemas is accomplished. 
@@ -163,6 +162,7 @@ CREATE TABLE notification(
 	dateSent DATE NOT NULL,
 	PRIMARY KEY (userID)
 );
+
 ```
 
  
