--- a/Report5/A5.md
+++ b/Report5/A5.md
@@ -11,10 +11,12 @@
 | R01                | users(__IDuser__ UK NN, username UK NN, password NN, name, lastName, gender, country, email UK NN)                                         |
 | R02                | projects(__IDproject__ UK NN, projTitle NN, projDescription NN, teamSize NN, privacy NN)           |
 | R03                | projectMembers(__projectID__ → projects NN, userID → users NN, role)                       |
-| R04                | tasks(__IDtask__ UK NN, taskOwner → users, projectID → projects NN, taskName NN, taskDescription NN, priority NN, dateCreated NN,dateLimit, status, taskWorker → users, completionDate) |
-| R05                | forumPost(__IDforum__ UK NN, projectID → projects NN, ownerID → users NN, forumTitle NN, post NN, dateCreated NN)                                |
-| R06                | comments(__IDcomment__ UK NN, forumID → forum NN, ownerID  → users NN, commentText NN, commentDate NN)                       |
-| R07                | notification((__userID__, __senderID__) → users NN, projectID → projects NN, taskID, notificationText NN, dateSent NN) |
+| R04                | tasks(__IDtask__ UK NN, taskOwner → users, projectID → projects NN, taskName NN, taskDescription NN, priority NN, dateCreated NN,dateLimit, status) |
+| R05                | taskInProgress(__IDtask__ UK NN, taskWorker → users) |
+| R06                | taskCompleted(__IDtask__ UK NN, taskWorker → users, completionDate) |
+| R07                | forumPost(__IDforum__ UK NN, projectID → projects NN, ownerID → users NN, forumTitle NN, post NN, dateCreated NN)                                |
+| R08                | comments(__IDcomment__ UK NN, forumID → forum NN, ownerID  → users NN, commentText NN, commentDate NN)                       |
+| R09                | notification(__userID__ → users NN, __senderID__ → users NN, projectID → projects NN, taskID, notificationText NN, dateSent NN) |
 
 where UK means UNIQUE KEY, NN means NOT NULL, DF means DEFAULT and CK means CHECK. 
  
@@ -65,7 +67,21 @@ Specification of additional domains:
 | FD0401          | {(IDtask, projectID)} → {taskOwner, taskName, taskDescription, priority, dateCreated, dateLimit, status, taskWorker, completionDate} |
 | **Normal Form** | BCNF                           |
 
-| **Table R05** (forumPost)                  |   |
+| **Table R05** (taskInProgress)                                |   |
+| ------------------------------------------------ | - |
+| **Keys**: { (taskID) }                         |   |
+| **Functional Dependencies**                      |   |
+| FD0401          | { taskID } → {taskWorker} |
+| **Normal Form** | BCNF                           |
+
+| **Table R06** (taskCompleted)                                |   |
+| ------------------------------------------------ | - |
+| **Keys**: { taskID }                         |   |
+| **Functional Dependencies**                      |   |
+| FD0401          | { taskID } → {taskWorker, completionDate} |
+| **Normal Form** | BCNF                           |
+
+| **Table R07** (forumPost)                  |   |
 | ---------------------------------------- | - |
 | **Keys**: { (IDforum, projectID) }        |   |
 | **Functional Dependencies**               |   |
@@ -73,7 +89,7 @@ Specification of additional domains:
 | FD0502          | { ownerID } → {IDforum, projectID, forumTitle, post, dateCreated} |
 | **Normal Form** | BCNF                    |
 
-| **Table R06** (comments)                   |   |
+| **Table R08** (comments)                   |   |
 | ---------------------------------------- | - |
 | **Keys**: { (IDcomment, forumID), ownerID }  |   |
 | **Functional Dependencies**               |   |
@@ -81,7 +97,7 @@ Specification of additional domains:
 | FD0602          | { onwerID } → {IDcomment, forumID, commentText, commentDate} |
 | **Normal Form** | BCNF                    |
 
-| **Table R07** (notification)           |   |
+| **Table R09** (notification)           |   |
 | ---------------------------------------- | - |
 | **Keys**: { userID, senderID, projectID } |   |
 | **Functional Dependencies**               |   |
@@ -123,7 +139,7 @@ CREATE TABLE projectMembers(
 );
 
 CREATE TABLE tasks(
-	IDtask INTEGER PRIMARY KEY Autoincrement NOT NULL,
+	IDtask INTEGER PRIMARY KEY Autoincrement NOT NULL UNIQUE,
 	taskOwner INTEGER REFERENCES users(IDuser) NOT NULL,
 	projectID INTEGER REFERENCES projects(IDproject) NOT NULL,
 	taskName VARCHAR(60) NOT NULL,
@@ -131,7 +147,16 @@ CREATE TABLE tasks(
 	priority ENUM('High', 'Medium', 'Low') NOT NULL,
 	dateCreated DATE NOT NULL,
 	dateLimit DATE,
-	status ENUM('Completed', 'Pending', 'Progress'),
+	status ENUM('Completed', 'Pending', 'Progress')
+);
+
+CREATE TABLE taskInProgress(
+	taskID INTEGER PRIMARY KEY Autoincrement NOT NULL UNIQUE,
+	taskWorker INTEGER REFERENCES users(IDuser)
+);
+
+CREATE TABLE taskCompleted(
+	taskID INTEGER PRIMARY KEY Autoincrement NOT NULL UNIQUE,
 	taskWorker INTEGER REFERENCES users(IDuser),
 	completionDate DATE
 );
@@ -162,6 +187,7 @@ CREATE TABLE notification(
 	dateSent DATE NOT NULL,
 	PRIMARY KEY (userID)
 );
+
 
 ```
 
