--- a/Report5/A5.md
+++ b/Report5/A5.md
@@ -39,7 +39,7 @@ Specification of additional domains:
  
 | **Table R01** (users)                    |   |
 | -------------------------------- | - |
-| **Keys**: { IDuser, username, email }                 |   |
+| **Keys**: { IDuser }, { username }, { email }                 |   |
 | **Functional Dependencies**      |   |
 | FD0101          | {IDuser} → {username, password, name, lastName, gender, country, email} |
 | FD0102          | {username} → {IDuser, password, name, lastName, gender, country, email} |
@@ -55,21 +55,21 @@ Specification of additional domains:
  
 | **Table R03** (projectMembers)                         |   |
 | ----------------------------------------- | - |
-| **Keys**: { (projectID, userID) }              |   |
+| **Keys**: { projectID, userID }              |   |
 | **Functional Dependencies**               |   |
-| FD0301          | {(projectID, userID)} → {role} |
+| FD0301          | { projectID, userID } → {role} |
 | **Normal Form** | BCNF                    |
 
 | **Table R04** (tasks)                                |   |
 | ------------------------------------------------ | - |
-| **Keys**: { (IDtask, projectID) }                         |   |
+| **Keys**: { IDtask, projectID }                         |   |
 | **Functional Dependencies**                      |   |
-| FD0401          | {(IDtask, projectID)} → {taskOwner, taskName, taskDescription, priority, dateCreated, dateLimit, status, taskWorker, completionDate} |
+| FD0401          | { IDtask, projectID } → {taskOwner, taskName, taskDescription, priority, dateCreated, dateLimit, status, taskWorker, completionDate} |
 | **Normal Form** | BCNF                           |
 
 | **Table R05** (taskInProgress)                                |   |
 | ------------------------------------------------ | - |
-| **Keys**: { (taskID) }                         |   |
+| **Keys**: { taskID }                         |   |
 | **Functional Dependencies**                      |   |
 | FD0401          | { taskID } → {taskWorker} |
 | **Normal Form** | BCNF                           |
@@ -85,23 +85,23 @@ Specification of additional domains:
 | ---------------------------------------- | - |
 | **Keys**: { (IDforum, projectID) }        |   |
 | **Functional Dependencies**               |   |
-| FD0501          | {(IDforum, projectID)} → {ownerID, forumTitle, post, dateCreated} |
+| FD0501          | { IDforum, projectID } → {ownerID, forumTitle, post, dateCreated} |
 | FD0502          | { ownerID } → {IDforum, projectID, forumTitle, post, dateCreated} |
 | **Normal Form** | BCNF                    |
 
 | **Table R08** (comments)                   |   |
 | ---------------------------------------- | - |
-| **Keys**: { (IDcomment, forumID), ownerID }  |   |
+| **Keys**: { IDcomment, forumID }, { ownerID }  |   |
 | **Functional Dependencies**               |   |
-| FD0601          | {(IDcomment, forumID)} → {ownerID, commentText, commentDate} |
+| FD0601          | { IDcomment, forumID } → {ownerID, commentText, commentDate} |
 | FD0602          | { onwerID } → {IDcomment, forumID, commentText, commentDate} |
 | **Normal Form** | BCNF                    |
 
 | **Table R09** (notification)           |   |
 | ---------------------------------------- | - |
-| **Keys**: { userID, senderID, projectID } |   |
+| **Keys**: { userID, senderID } |   |
 | **Functional Dependencies**               |   |
-| FD0701          | {(userID, senderID, projectID)} → {taskID, notificationText, dateSent} |
+| FD0701          | { userID, senderID } → {projectID, taskID, notificationText, dateSent} |
 | **Normal Form** | BCNF                    |
  
 > To validate the Relational Schema obtained from the Conceptual Model, all functional dependencies are identified and the normalization of all relation schemas is accomplished. 
@@ -184,8 +184,7 @@ CREATE TABLE notification(
 	projectID INTEGER REFERENCES projects(IDproject) NOT NULL,
 	taskID INTEGER REFERENCES tasks(IDtask),
 	notificationText VARCHAR(500) NOT NULL,
-	dateSent DATE NOT NULL,
-	PRIMARY KEY (userID)
+	dateSent DATE NOT NULL
 );
 
 
