--- a/Report5/A5.md
+++ b/Report5/A5.md
@@ -152,13 +152,13 @@ CREATE TABLE tasks(
 
 CREATE TABLE taskInProgress(
 	taskID INTEGER PRIMARY KEY Autoincrement NOT NULL UNIQUE,
-	taskWorker INTEGER REFERENCES users(IDuser)
+	taskWorker INTEGER REFERENCES users(IDuser) NOT NULL
 );
 
 CREATE TABLE taskCompleted(
 	taskID INTEGER PRIMARY KEY Autoincrement NOT NULL UNIQUE,
-	taskWorker INTEGER REFERENCES users(IDuser),
-	completionDate DATE
+	taskWorker INTEGER REFERENCES users(IDuser) NOT NULL,
+	completionDate DATE NOT NULL
 );
 
 CREATE TABLE forumPost(
