--- a/Report5/A5.md
+++ b/Report5/A5.md
@@ -28,7 +28,7 @@ Specification of additional domains:
 | ----------- | ---------------------------------------- |
 | Today	      | DATE DEFAULT CURRENT_DATE                |
 | Priority    | ENUM ('High', 'Medium', 'Low')           |
-| Status      | ENUM ('Completed', 'Pending', 'Progress) |
+| Status      | ENUM ('Completed', 'Pending', 'Progress') |
 | Gender      | ENUM ('M', 'F', 'O')                     |
 | Role        | ENUM('Coordinator', 'Member', 'Pending') |
  
