--- a/Report5/A5.md
+++ b/Report5/A5.md
@@ -12,8 +12,8 @@
 | R02                | projects(__IDproject__ UK NN, projTitle NN, projDescription NN, teamSize NN, privacy NN)           |
 | R03                | projectMembers(__projectID__ → projects NN, userID → users NN, role)                       |
 | R04                | tasks(__IDtask__ UK NN, taskOwner → users, projectID → projects NN, taskName NN, taskDescription NN, priority NN, dateCreated NN,dateLimit, status) |
-| R05                | taskInProgress(__IDtask__ UK NN, taskWorker → users) |
-| R06                | taskCompleted(__IDtask__ UK NN, taskWorker → users, completionDate) |
+| R05                | taskInProgress(__IDtask__ UK NN, taskWorker → users NN) |
+| R06                | taskCompleted(__IDtask__ UK NN, taskWorker → users NN, completionDate NN) |
 | R07                | forumPost(__IDforum__ UK NN, projectID → projects NN, ownerID → users NN, forumTitle NN, post NN, dateCreated NN)                                |
 | R08                | comments(__IDcomment__ UK NN, forumID → forum NN, ownerID  → users NN, commentText NN, commentDate NN)                       |
 | R09                | notification(__userID__ → users NN, __senderID__ → users NN, projectID → projects NN, taskID, notificationText NN, dateSent NN) |
